--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "author": "Aidan O'Malley",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --hot"
+    "start": "webpack-dev-server --hot --config ./webpack/webpack.config.js"
   },
   "dependencies": {
     "path": "^0.12.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "webpack": "^4.2.0",
     "webpack-dev-server": "^3.1.1"
   },
