--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,6 @@
 {
   "extends": "airbnb",
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaFeatures": {
       "experimentalObjectRestSpread": true
@@ -9,11 +10,20 @@
     "max-len": 0,
     "no-else-return": 0,
     "arrow-body-style": 0,
-    "import/no-unresolved": 0
+    "import/no-unresolved": 0,
+    "no-plusplus": "off",
+    "no-lonely-if": "off",
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "jsx-a11y/label-has-for": [ 2, {
+      "components": [ "Label" ],
+      "required": {
+          "some": [ "nesting", "id" ]
+      }
+    }]
   },
   "env": {
     "browser": true,
-    "mocha": true
+    "jest": true
   },
   "globals": {
     "expect": true,
