--- a/package.json
+++ b/package.json
@@ -6,22 +6,33 @@
   "author": "Aidan O'Malley",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --hot --config ./webpack/webpack.config.js"
+    "start": "webpack-dev-server --hot --env.NODE_ENV=dev"
   },
   "dependencies": {
-    "path": "^0.12.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "webpack": "^4.2.0",
-    "webpack-dev-server": "^3.1.1"
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "webpack-cli": "^2.0.13"
+    "css-loader": "^1.0.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.3",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "jest": "^23.4.1",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.2.0",
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-server": "^3.1.1"
   }
 }
