--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-  "presets": ["env", "react", "stage-2"]
+  "presets": ["@babel/env", "@babel/react"],
+  "plugins": [
+    ["@babel/plugin-proposal-optional-chaining", { "loose": false }],
+    ["@babel/plugin-proposal-class-properties", { "loose": false }],
+  ],
 }
